# milbi

./: .gitignore  .goreleaser.yaml  CHANGELOG.md  LICENSE.txt  Makefile  Taskfile.yaml  config.yaml.tpl  example-config.yaml  readme.md  setup.cfg
.github/workflows/: release-devel.yaml  release.yaml  tests.yaml
milbi/: go.mod  go.sum  main.go  main_test.go
milbi/internal/app/: app.go  cmd_check.go  cmd_dump.go  cmd_explain.go  cmd_info.go  cmd_init.go  cmd_prune.go  cmd_snapshot.go  cmd_sync.go  structs.go  testutils.go  testutils_test.go  util.go  util_test.go
milbi/internal/restic/: execs.go  main.go  structs.go
milbi/internal/syncobject/: main.go  osinterface.go  structs.go
milbi/tests/: manifests.yaml
src/milbi/: __init__.py  __main__.py  class_config.py  class_milbi.py  class_state.py
test/: __init__.py  test_cli.py
tests/: test_cli.py
tests/files/: clitest-config.yaml
